--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>People Enter:</h1>
     <h2 id="count-el">0</h2>
     <button id="increament-btn" onclick="increament()">INCREMENT</button>
-    
+    <button id="save" onclick="save()">SAVE</button>
+    <p id="save-el">Previous entiries:</p>
     <script src="index.js"></script>
 </body>
 </html>
